add_subdirectory(internal)

target_sources(${PROJECT_NAME} PRIVATE
	${CMAKE_CURRENT_SOURCE_DIR}/assets.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/color.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/font.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/game.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/image.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/level.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/logger.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/monitor.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/music.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/sound.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/text.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/texture.cpp
)